--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <header>
             <h1>Temperature Converter</h1>
-            <p>Enter a temperature in either Fahrenheit, Celsius, or Kelvin to see what it converts to.</p>
+            <p>Enter a temperature in either Fahrenheit or Celcius to see what it converts to in the other system.</p>
         </header>
 
         <div class="converter">
@@ -27,10 +27,6 @@
                 <input type="number" class="celsius">
             </div>
 
-            <div class="kelvin">
-                <label class="kelvin">Kelvin</label>
-                <input type="number" class="kelvin">
-            </div>
 
         </div>
 
